# rules-to-agent

./: .gitignore  CLAUDE.md  README.md  dynamism_thought.md  high-level-design.md  implementation_plan.md  pyproject.toml  technical-design.md
config/: phone_upgrade.yaml
deploy/: app.py
mock_mcp_server/: server.py
src/: main.py
src/agents/: agent.py  manager.py
src/agents/orchestrator/: fsm.py
src/orchestrator/: fsm.py  session.py
src/tools/: mcp_client.py
tests/: test_agent_flow.py  test_e2e_live.py  test_fsm.py
